@@ -12,6 +12,9 @@
 	https://bugzilla.redhat.com/show_bug.cgi?id=950644
 	* tp/Makefile.am: reorder alphabetically test input files.  
 	Distribute missing test files.
+	* tp/t/test_utils.pl(test): allow for marking tests as TODO.  Use
+	this facility to mark a test of all_spaces that fails on perl 5.10
+	with NEL not being treated the same as in perl 5.14.
 
 2013-08-09  Patrice Dumas  <pertusus@free.fr>
 
